# apps/api/src/auth/dto/auth-response.dto.ts
@@ -2,5 +2,5 @@ import { ApiProperty } from '@nestjs/swagger';
 
 export class AuthResponseDto {
   @ApiProperty()
-  accessToken!: string;
+  message!: string;
 }
